--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "highlight.js": "^11.3.1",
     "ini": "^2.0.0",
     "js-yaml": "^4.1.0",
+    "konan": "^2.1.1",
     "lodash": "^4.17.21",
     "mdast-util-find-and-replace": "^2.1.0",
     "mdast-util-inject": "^1.1.0",
@@ -37,7 +38,6 @@
     "remark-html": "^15.0.0",
     "remark-reference-links": "^6.0.0",
     "remark-toc": "^8.0.1",
-    "konan": "^2.1.1",
     "resolve": "^1.20.0",
     "strip-json-comments": "^4.0.0",
     "unist-builder": "^3.0.0",
@@ -55,7 +55,8 @@
     "chdir": "0.0.0",
     "cz-conventional-changelog": "3.3.0",
     "documentation-schema": "0.0.1",
-    "eslint": "^8.0.1",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
     "husky": "^4.3.8",
@@ -63,9 +64,10 @@
     "json-schema": "^0.4.0",
     "lint-staged": "^12.0.2",
     "mock-fs": "^5.1.2",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "standard-version": "^9.3.2",
-    "tmp": "^0.2.1"
+    "tmp": "^0.2.1",
+    "typescript": "^4.6.2"
   },
   "keywords": [
     "documentation",
