Update ESLint version

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "chdir": "0.0.0",
     "cz-conventional-changelog": "3.3.0",
     "documentation-schema": "0.0.1",
-    "eslint": "^8.10.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
@@ -86,12 +86,19 @@
   "scripts": {
     "build": "npm run doc",
     "release": "standard-version",
-    "doc-ts": "node ./bin/documentation.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --output docs",
+    "update-vue": "cp docs/doc.md /home/thibautvanderhaegen/Documents/docs/src/generated/doc.md",
+    "doc-ts": "node ./src/index.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --output docs",
     "doc-ts-exported": "node ./bin/documentation.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --document-exported --output docs",
     "doc:doc": "npm run doc-ts ./example/doc.ts",
     "doc:e:doc": "npm run doc-ts-exported ./example/doc.ts",
     "doc:docd": "npm run doc-ts ./example/doc.d.ts",
     "doc:e:docd": "npm run doc-ts-exported ./example/doc.d.ts",
+    "doc:ogma": "npm run doc-ts ./example/ogma.min.d.ts",
+    "doc:e:ogma": "npm run doc-ts-exported ./example/ogma.min.d.ts",
+    "doc:testd": "npm run doc-ts ./example/test.d.ts",
+    "doc:e:testd": "npm run doc-ts-exported ./example/test.d.ts",
+    "doc:test": "npm run doc-ts ./example/test.ts",
+    "doc:e:test": "npm run doc-ts-exported ./example/test.ts",
     "format": "prettier --write '{src,__tests__,declarations,bin,default_theme}/**/*.js'",
     "doc": "node ./bin/documentation.js build src/index.js -f md --access=public > docs/NODE_API.md",
     "self-lint": "node ./bin/documentation.js lint src",
