--- a/package.json
+++ b/package.json
@@ -89,18 +89,8 @@
     "update-vue": "cp docs/doc.md /home/thibautvanderhaegen/Documents/docs/src/generated/doc.md",
     "doc-ts": "node ./src/index.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --output docs",
     "doc-ts-exported": "node ./bin/documentation.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --document-exported --output docs",
-    "doc:doc": "npm run doc-ts ./example/doc.ts",
-    "doc:e:doc": "npm run doc-ts-exported ./example/doc.ts",
-    "doc:docd": "npm run doc-ts ./example/doc.d.ts",
-    "doc:e:docd": "npm run doc-ts-exported ./example/doc.d.ts",
-    "doc:ogma": "npm run doc-ts ./example/ogma.min.d.ts",
-    "doc:e:ogma": "npm run doc-ts-exported ./example/ogma.min.d.ts",
-    "doc:testd": "npm run doc-ts ./example/test.d.ts",
-    "doc:e:testd": "npm run doc-ts-exported ./example/test.d.ts",
-    "doc:test": "npm run doc-ts ./example/test.ts",
-    "doc:e:test": "npm run doc-ts-exported ./example/test.ts",
-    "doc:mixins": "npm run doc-ts ./example/mixins.ts",
-    "doc:e:mixins": "npm run doc-ts-exported ./example/mixins.ts",
+    "doc:": "npm run doc-ts",
+    "doc:e:": "npm run doc-ts-exported",
     "format": "prettier --write '{src,__tests__,declarations,bin,default_theme}/**/*.js'",
     "doc": "node ./bin/documentation.js build src/index.js -f md --access=public > docs/NODE_API.md",
     "self-lint": "node ./bin/documentation.js lint src",
