Create the folder containing the Ogma theme

--- a/package.json
+++ b/package.json
@@ -87,11 +87,11 @@
     "build": "npm run doc",
     "release": "standard-version",
     "update-vue": "cp docs/doc.md /home/thibautvanderhaegen/Documents/docs/src/generated/doc.md",
-    "doc-ts": "node ./src/index.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --output docs",
-    "doc-ts-exported": "node ./bin/documentation.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --document-exported --output docs",
+    "doc-ts": "node ./src/index.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --output docs --theme ./src/ogma_theme/index.js",
+    "doc-ts-exported": "node ./bin/documentation.js build --pe .ts --re .ts --re .d.ts --github --sort-order alpha --format=html --document-exported --output docs --theme ./src/ogma_theme/index.js",
     "doc:": "npm run doc-ts",
     "doc:e:": "npm run doc-ts-exported",
-    "format": "prettier --write '{src,__tests__,declarations,bin,default_theme}/**/*.js'",
+    "format": "prettier --write '{src,__tests__,declarations,bin,default_theme,ogma_theme}/**/*.js'",
     "doc": "node ./bin/documentation.js build src/index.js -f md --access=public > docs/NODE_API.md",
     "self-lint": "node ./bin/documentation.js lint src",
     "test": "eslint . && node --experimental-vm-modules node_modules/jest/bin/jest.js",
